Create repository layer, add dagger, refactoring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MusicApp</string>
+    <string name="downloaded">Сохраненное</string>
+    <string name="home">Главная</string>
+    <string name="track_title">Название трека</string>
+    <string name="artist_name">Имя исполнителя</string>
+    <string name="track_cover">Обложка трека</string>
+    <string name="search">Поиск...</string>
 </resources>
